--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -9,10 +9,10 @@ dependencies = [
     "websockets>=12.0",
     "pydantic>=2.6.0",
     "python-dotenv>=1.0.0",
-    "dependency-injector>=4.41.0",
     "structlog>=24.1.0",
     "redis>=5.0.1",
     "aioredis>=2.0.1",
+    "aiosqlite>=0.21.0",
 ]
 
 [build-system]
